<resources>
    <string name="app_name">Poke Research Dictionary</string>
    <string name="author_name" translatable="false">npes87184</string>
    <string name="all_rules">All rules:</string>

    <string name="donate_success">Thank you for your donation!</string>

    <!-- dict dialog related -->
    <string name="dict_dialog_hint">Flying type</string>
    <string name="dict_dialog_ok">OK</string>
    <string name="dict_dialog_cancel">End</string>
    <string name="dict_dialog_update">Update</string>
    <string name="no_result">No result, you can update database in app and try again.</string>

    <!-- about page related -->
    <string name="contact">Contact Me</string>
    <string name="subject">PokeDict</string>
    <string name="mail_body">My problem is:\nMy phone is: \nMy android version is:\nOther:</string>
    <string name="version_tag">Version:\u0020</string>
    <string name="author_tag">Author:\u0020</string>
    <string name="web_tag">Visit my website</string>
    <string name="rate">Rate</string>

    <!-- Navigation related -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="list">All list</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="report">Report research</string>
    <string name="report_desc">Help trainers in the world!</string>
    <string name="donate">Donate</string>
    <string name="donate_desc">Give power for continuously maintaining this service.</string>

    <!-- Update fragment related -->
    <string name="current_version">Current version:</string>
    <string name="update">Update database</string>
    <string name="check_update">Check Update</string>
    <string name="checking">Checking\u2026</string>
    <string name="no_network">No network</string>
    <string name="you_are_up_to_date">You\'re up to date!</string>
    <string name="updated">Database updated!\n\nAdd:\n\n</string>
    <string name="list_num">List number:</string>

    <!-- Preference fragment related -->
    <string name="pref_theme">Theme</string>
    <string name="pref_dict_language">Dictionary language</string>
    <string name="pref_system_default">System default</string>
    <string name="pref_dict_language_enu" translatable="false">English</string>
    <string name="pref_dict_language_cht" translatable="false">繁體中文</string>

</resources>
