<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_list"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/list" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_cloud_download_black_24dp"
            android:title="@string/update" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/baseline_cloud_upload_black_24"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/baseline_card_giftcard_black_24"
            android:title="@string/donate" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_settings_black_24"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/about" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
        </menu>
    </item>

</menu>
