<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.UpdateFragment">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        card_view:cardCornerRadius="3dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="fill_parent"
                android:layout_height="130dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/pikachu" />

            <TextView
                android:id="@+id/textViewDictState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="@string/no_network" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/baseline_timeline_black_24" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginEnd="60dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textSize="18sp"
                        android:text="@string/current_version" />

                    <TextView
                        android:id="@+id/textViewVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="30dp"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/baseline_list_black_24" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginEnd="60dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:gravity="center_horizontal"
                        android:textSize="18sp"
                        android:text="@string/list_num" />

                    <TextView
                        android:id="@+id/textViewListNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/linearLayoutUpdate"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="30dp"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/baseline_language_black_24" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginEnd="60dp"
                    android:textSize="18sp"
                    android:text="@string/check_update" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        card_view:cardCornerRadius="3dp">

        <LinearLayout
            android:id="@+id/linearLayoutReport"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="fill_parent"
                android:layout_marginStart="30dp"
                android:src="@drawable/smartphone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginEnd="60dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="18sp"
                    android:text="@string/report" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/report_desc" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        card_view:cardCornerRadius="3dp">

        <LinearLayout
            android:id="@+id/linearLayoutDonate"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="fill_parent"
                android:layout_marginStart="30dp"
                android:src="@drawable/pokecoin" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="18sp"
                    android:text="@string/donate" />

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/donate_desc" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>